Referencias en js

--- a/index.html
+++ b/index.html
@@ -16,15 +16,22 @@
         <button id="botonBuscar">Buscar</button>
 
         <p><strong>Nombre común:</strong></p>
+        <p id="nombre"></p>
         <p><strong>Nombre oficial:</strong></p>
+        <p id="nombreOf"></p>
         <p><strong>Capital: </strong></p>
+        <p id="capital"></p>
         <p><strong>Región: </strong></p>
+        <p id="region"></p>
         <p><strong>Idioma:</strong></p>
+        <p id="idioma"></p>
         <p><strong>Zona Horaria :</strong></p>
+        <p id="hora"></p>
         <p><strong>Bandera:</strong></p>
+        <img id="bandera" src="" alt="">
         <p><strong>Mapa:</strong></p>
+        <iframe id="mapa" src="" frameborder="0"></iframe>
         
-
     </form>
 
     <script src="app.js"></script>
