--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Buscador de Países 🌐.</h1>
 
     <form action="">
+        <p><em><strong>Nota:</strong> Coloca el país en ingles.</em></p>
         <label for="pais">Pais a buscar : </label>
         <input type="text" name="pais" id="pais">
         
