--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <h1>Buscador de Países 🌐.</h1>
 
+    <p><em style="font-size: small;">Aqui puedes consultar el listado de paises en ingles ⬇️</em></p>
+    <a href="https://www.inglessencillo.com/paises" target="_blank">Lista de paises</a>
+
     <form action="">
         <p><em><strong>Nota:</strong> Coloca el país en ingles.</em></p>
         <label for="pais">Pais a buscar : </label>
