Modificacion problema con bandera

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p><strong>Zona Horaria :</strong></p>
             <p id="hora"></p>
             <p><strong>Bandera:</strong></p>
-            <img id="bandera" src="" alt="">
+            <div id="bandera"></div>
             <p><strong>Mapa:</strong></p>
             <iframe id="mapa" src="" frameborder="0"></iframe>
         </div>
